--- a/boards/shields/chastity/chastity.dtsi
+++ b/boards/shields/chastity/chastity.dtsi
@@ -1,29 +1,49 @@
-// chastity.dtsi
+/*
+ * Copyright (c) 2024 The ZMK Contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
-&default_transform {
-    compatible = "zmk,matrix-transform";
-    columns = <7>;
-    rows = <5>;
+/ {
     chosen {
         zmk,kscan = &kscan0;
-        zmk,physical-layout = &default_layout;
-        // Other chosen items
+        zmk,matrix_transform = &default_transform;
     };
-    map = <
-        // Left Side
-        RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
-        RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
-        RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
-        RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)
-        RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
-        
-        // Right Side
-                RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(0,12) RC(0,13)
-                RC(1,8) RC(1,9) RC(1,10) RC(1,11) RC(1,12) RC(1,13)
-                RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13)
-        RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11) RC(3,12) RC(3,13)
-                RC(4,8) RC(4,9) RC(4,10) RC(4,11) RC(4,12) RC(4,13)
-    >;
+
+    default_transform: keymap_transform_0 {
+        compatible = "zmk,matrix-transform";
+        columns = <14>;
+        rows = <5>;
+        map = <
+            // Left Side
+            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
+            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
+            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
+            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)
+            RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
+            
+            // Right Side
+                    RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(0,12) RC(0,13)
+                    RC(1,8) RC(1,9) RC(1,10) RC(1,11) RC(1,12) RC(1,13)
+                    RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13)
+            RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11) RC(3,12) RC(3,13)
+                    RC(4,8) RC(4,9) RC(4,10) RC(4,11) RC(4,12) RC(4,13)
+        >;
+    };
+
+    kscan0: kscan {
+        compatible = "zmk,kscan-gpio-matrix";
+        label = "KSCAN";
+        diode-direction = "col2row";
+
+        row-gpios
+            = <&gpio1 1  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P1.01
+            , <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.20
+            , <&gpio0 2  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.02
+            , <&gpio0 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.13
+            , <&gpio0 9  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.09
+            ;
+    };
 };
