--- a/boards/shields/chastity/chastity.conf
+++ b/boards/shields/chastity/chastity.conf
@@ -1,9 +1,15 @@
-# L1 | L2 | L3 | L4 | L5 | L6 |             | R6 | R5 | R4 | R3 | R2 | R1
-# --------------------------------       --------------------------------
-# L1 | L2 | L3 | L4 | L5 | L6 |             | R6 | R5 | R4 | R3 | R2 | R1
-# --------------------------------       --------------------------------
-# L1 | L2 | L3 | L4 | L5 | L6 |             | R6 | R5 | R4 | R3 | R2 | R1
-# --------------------------------       --------------------------------
-# L1 | L2 | L3 | L4 | L5 | L6 | L7       R7 | R6 | R5 | R4 | R3 | R2 | R1
-# --------------------------------       --------------------------------
-# L1 | L2 | L3 | L4 | L5 | L6 |             | R6 | R5 | R4 | R3 | R2 | R1
+# Uncomment these two line to add support for encoders to your firmware
+# CONFIG_EC11=y
+# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Uncomment the following line to enable the OLED Display
+# CONFIG_ZMK_DISPLAY=y
+
+# Uncomment the following lines to enable RGB underglow
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+CONFIG_USB_DEVICE_PRODUCT="Chastity Keyboard"
+CONFIG_USB_DEVICE_VID=0x1209
+CONFIG_USB_DEVICE_PID=0x0001
+CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
