--- a/boards/shields/chastity/chastity_right.conf
+++ b/boards/shields/chastity/chastity_right.conf
@@ -8,8 +8,13 @@
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 
+# USB and Bluetooth naming
 CONFIG_ZMK_KEYBOARD_NAME="Chastity Right"
 CONFIG_USB_DEVICE_PRODUCT="Chastity Keyboard"
+CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
 CONFIG_USB_DEVICE_VID=0x1209
 CONFIG_USB_DEVICE_PID=0x0001
-CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
+
+# Bluetooth specific settings
+CONFIG_BT_DEVICE_NAME="Chastity Right"
+CONFIG_BT_DEVICE_APPEARANCE=961
