--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: chastity
+      url-base: https://github.com/poes
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: chastity-zmk
+      remote: chastity
+      revision: main
   self:
     path: config
