--- a/boards/shields/chastity/chastity.conf
+++ b/boards/shields/chastity/chastity.conf
@@ -8,8 +8,7 @@
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 
-CONFIG_ZMK_KEYBOARD_NAME="Chastity"
-CONFIG_USB_DEVICE_PRODUCT="Chastity Keyboard"
+# USB configuration
 CONFIG_USB_DEVICE_VID=0x1209
 CONFIG_USB_DEVICE_PID=0x0001
 CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
