--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: chastity
-      url-base: https://github.com/poes
+      url-base: https://github.com/brad-za
   projects:
     - name: zmk
       remote: zmkfirmware
