--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,3 +3,6 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    with:
+      config_path: config
+      extra_modules: /__w/chastity-zmk/chastity-zmk/boards
