--- a/boards/shields/chastity/chastity.conf
+++ b/boards/shields/chastity/chastity.conf
@@ -1,14 +1,12 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Enable Bluetooth
+CONFIG_ZMK_BLE=y
 
-# Uncomment the following line to enable the OLED Display
-# CONFIG_ZMK_DISPLAY=y
-
-# Uncomment the following lines to enable RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-
-# USB configuration
+# Set USB and Bluetooth names
+CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+CONFIG_USB_DEVICE_PRODUCT="Chastity Keyboard"
+CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
 CONFIG_USB_DEVICE_VID=0x1209
 CONFIG_USB_DEVICE_PID=0x0001
-CONFIG_USB_DEVICE_MANUFACTURER="putintin420"
+
+# Enable split keyboard support
+CONFIG_ZMK_SPLIT=y
