--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,4 +5,4 @@ jobs:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
     with:
       config_path: config
-      extra_modules: /__w/chastity-zmk/chastity-zmk/boards
+      archive_name: firmware
