--- a/boards/shields/chastity/chastity_right.conf
+++ b/boards/shields/chastity/chastity_right.conf
@@ -1,9 +1,10 @@
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# Enable Bluetooth
+CONFIG_ZMK_BLE=y
 
-# Uncomment the following line to enable the OLED Display
-# CONFIG_ZMK_DISPLAY=y
+# Set USB and Bluetooth names
+CONFIG_ZMK_KEYBOARD_NAME="Chastity Right"
+CONFIG_BT_DEVICE_NAME="Chastity Right"
 
-# Uncomment the following lines to enable RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
+# Enable split keyboard support
+CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y
