--- a/boards/shields/chastity/chastity.conf
+++ b/boards/shields/chastity/chastity.conf
@@ -1,2 +1,20 @@
 # Enable Bluetooth
 CONFIG_ZMK_BLE=y
+
+# Set Bluetooth name
+CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+
+# Enable split keyboard support
+CONFIG_ZMK_SPLIT=y
+
+# Enable split keyboard BLE support
+CONFIG_ZMK_SPLIT_BLE=y
+
+# Increase Bluetooth signal power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Improve BLE connection reliability
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Enable sleep mode to improve battery life
+CONFIG_ZMK_SLEEP=y
