--- a/boards/shields/chastity/chastity.dtsi
+++ b/boards/shields/chastity/chastity.dtsi
@@ -10,7 +10,6 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
-        zmk,physical-layout = &default_layout;
     };
 
     default_transform: keymap_transform_0 {
@@ -18,41 +17,25 @@
         columns = <14>;
         rows = <5>;
         map = <
-            // Left Side
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)
-            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)
-            RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)
-            
-            // Right Side
-                    RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(0,12) RC(0,13)
-                    RC(1,8) RC(1,9) RC(1,10) RC(1,11) RC(1,12) RC(1,13)
-                    RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13)
-            RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11) RC(3,12) RC(3,13)
-                    RC(4,8) RC(4,9) RC(4,10) RC(4,11) RC(4,12) RC(4,13)
+            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)                     RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(0,12)
+            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5)                     RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11) RC(1,12)
+            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                     RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12)
+            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)    RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11) RC(3,12) RC(3,13)
+            RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)                     RC(4,7) RC(4,8) RC(4,9) RC(4,10) RC(4,11) RC(4,12)
         >;
-    };
-
-    default_layout: default_layout {
-        compatible = "zmk,physical-layout";
-        display-name = "Default Layout";
-        transform = <&default_transform>;
-        kscan = <&kscan0>;
     };
 
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
         diode-direction = "col2row";
-        wakeup-source;
 
         row-gpios
-            = <&gpio1 1  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P1.01
-            , <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.20
-            , <&gpio0 2  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.02
-            , <&gpio0 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.13
-            , <&gpio0 9  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P0.09
+            = <&gpio1 1  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row 0
+            , <&gpio0 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row 1
+            , <&gpio0 2  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row 2
+            , <&gpio0 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row 3
+            , <&gpio0 9  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row 4
             ;
     };
 };
