--- a/config/boards/shields/chastity/chastity_left.conf
+++ b/config/boards/shields/chastity/chastity_left.conf
@@ -1,2 +1,2 @@
-# Left half is the central unit that connects to host
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+# Configure for central split keyboard role
+CONFIG_ZMK_SPLIT_BLE_ROLE_CENTRAL=y
