--- a/config/boards/shields/chastity/chastity_right.conf
+++ b/config/boards/shields/chastity/chastity_right.conf
@@ -1,2 +1,2 @@
-# Right half is the peripheral unit
-CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y
+# Configure for peripheral split keyboard role
+CONFIG_ZMK_SPLIT_BLE_ROLE_PERIPHERAL=y
