--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,20 +1,17 @@
-# Enable Bluetooth
-CONFIG_ZMK_BLE=y
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
 
-# Set Bluetooth name
-CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+# Increase Bluetooth transmit power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable split keyboard support
 CONFIG_ZMK_SPLIT=y
 
-# Enable split keyboard BLE support
-CONFIG_ZMK_SPLIT_BLE=y
+# Enable Bluetooth
+CONFIG_ZMK_BLE=y
 
-# Increase Bluetooth signal power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Enable USB
+CONFIG_ZMK_USB=y
 
-# Improve BLE connection reliability
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-
-# Enable sleep mode to improve battery life
-CONFIG_ZMK_SLEEP=y
+# Name will be set from Kconfig.defconfig
+CONFIG_ZMK_KEYBOARD_NAME="Chastity"
