--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,10 +1,4 @@
-# Enable deep sleep support
-CONFIG_ZMK_SLEEP=y
-
-# Increase Bluetooth transmit power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# Enable split keyboard support
+.# Enable split keyboard support
 CONFIG_ZMK_SPLIT=y
 
 # Enable Bluetooth
@@ -13,5 +7,5 @@ CONFIG_ZMK_BLE=y
 # Enable USB
 CONFIG_ZMK_USB=y
 
-# Name will be set from Kconfig.defconfig
-CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+# Enable deep sleep
+CONFIG_ZMK_SLEEP=y
