--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,4 +1,4 @@
-.# Enable split keyboard support
+# Enable split keyboard support
 CONFIG_ZMK_SPLIT=y
 
 # Enable Bluetooth
@@ -7,5 +7,7 @@ CONFIG_ZMK_BLE=y
 # Enable USB
 CONFIG_ZMK_USB=y
 
-# Enable deep sleep
-CONFIG_ZMK_SLEEP=y
+# Enable logging for initial debugging
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_LOG=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
