--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_USB=y
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
+
+# Increase Bluetooth power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
