--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,16 +1,30 @@
 # Enable split keyboard support
 CONFIG_ZMK_SPLIT=y
 
-# Enable Bluetooth
+# Enable Bluetooth with better connection handling
 CONFIG_ZMK_BLE=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 
 # Enable USB
 CONFIG_ZMK_USB=y
 
-# Enable logging for initial debugging
+# Enable logging for debugging
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 
-# Increase Bluetooth power
+# Force USB stack reset on boot
+CONFIG_USB_DEVICE_STACK=y
+
+# Use polling for matrix scanning to ensure reliable detection
+CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+# Increase BLE transmit power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable deep sleep
+CONFIG_ZMK_SLEEP=n  # Temporarily disable sleep for testing
