--- a/config/boards/shields/chastity/chastity.dtsi
+++ b/config/boards/shields/chastity/chastity.dtsi
@@ -10,6 +10,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zephyr,console = &cdc_acm_uart;
     };
 
     default_transform: keymap_transform_0 {
@@ -30,6 +31,7 @@
         label = "KSCAN";
         diode-direction = "col2row";
         wakeup-source;
+        polling-interval-msec = <1>;
 
         row-gpios
             = <&gpio1 1  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P1.01
@@ -47,4 +49,12 @@
 
 &gpio1 {
     status = "okay";
+};
+
+&usbd {
+    status = "okay";
+    cdc_acm_uart: cdc_acm_uart {
+        compatible = "zephyr,cdc-acm-uart";
+        label = "CDC_ACM_0";
+    };
 };
