--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,20 +1,14 @@
-# Enable split keyboard support
-CONFIG_ZMK_SPLIT=y
+# Disable split keyboard support for now
+CONFIG_ZMK_SPLIT=n
 
-# Enable Bluetooth
-CONFIG_ZMK_BLE=y
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Disable Bluetooth for now
+CONFIG_ZMK_BLE=n
 
 # Enable USB
 CONFIG_ZMK_USB=y
 
-# Enable logging for debugging
-CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG=y
-CONFIG_ZMK_LOG_LEVEL_DBG=y
-
-# Use polling for matrix scanning
-CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
-
 # Disable sleep for testing
 CONFIG_ZMK_SLEEP=n
+
+# Disable logging for now to ensure clean USB operation
+CONFIG_ZMK_USB_LOGGING=n
