--- a/config/boards/shields/chastity/chastity.dtsi
+++ b/config/boards/shields/chastity/chastity.dtsi
@@ -27,8 +27,7 @@
 
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
-        diode-direction = "col2row";
-        wakeup-source;
+        diode-direction = "row2col";
 
         row-gpios
             = <&gpio1 1  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // P1.01
