--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -6,6 +6,11 @@ CONFIG_ZMK_BLE=n
 
 # Enable USB
 CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_HID=y
+
+# Enable keyboard HID driver
+CONFIG_ZMK_USB_BOOT=y
 
 # Disable sleep for testing
 CONFIG_ZMK_SLEEP=n
