--- a/config/boards/shields/chastity/chastity.conf
+++ b/config/boards/shields/chastity/chastity.conf
@@ -1,19 +1,37 @@
-# Disable split keyboard support for now
+# Completely disable all wireless functionality
 CONFIG_ZMK_SPLIT=n
-
-# Disable Bluetooth for now
 CONFIG_ZMK_BLE=n
+CONFIG_BT=n
+CONFIG_ZMK_SPLIT_BLE=n
 
-# Enable USB
+# USB Configuration
 CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_HID=y
-
-# Enable keyboard HID driver
 CONFIG_ZMK_USB_BOOT=y
 
-# Disable sleep for testing
-CONFIG_ZMK_SLEEP=n
+# USB Stability Settings
+CONFIG_USB_DC_HAS_HS_SUPPORT=n
+CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
+CONFIG_USB_MAX_POWER=100
+CONFIG_USB_SELF_POWERED=n
 
-# Disable logging for now to ensure clean USB operation
+# Disable sleep and power management
+CONFIG_ZMK_SLEEP=n
+CONFIG_PM=n
+CONFIG_PM_DEVICE=n
+
+# Disable logging
 CONFIG_ZMK_USB_LOGGING=n
+CONFIG_LOG=n
+CONFIG_LOG_MINIMAL=n
+
+# Core Configuration
+CONFIG_ZMK_KEYBOARD_NAME="Chastity"
+CONFIG_USB_DEVICE_MANUFACTURER="ZMK Project"
+CONFIG_USB_DEVICE_VID=0x1D50
+CONFIG_USB_DEVICE_PID=0x615E
+
+# Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
