--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
-# This file generates the GitHub Actions matrix
----
 include:
   - board: nice_nano_v2
     shield: chastity_left
+  - board: nice_nano_v2
+    shield: chastity_right
