--- a/config/boards/shields/chastity/chastity.dtsi
+++ b/config/boards/shields/chastity/chastity.dtsi
@@ -30,13 +30,13 @@ RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5)                   RC(4,8) RC(4,9
         diode-direction = "col2row";
 
         col-gpios
-            = <&gpio1 15 GPIO_ACTIVE_HIGH>
-            , <&gpio1 6  GPIO_ACTIVE_HIGH>
-            , <&gpio1 4  GPIO_ACTIVE_HIGH>
-            , <&gpio0 11 GPIO_ACTIVE_HIGH>
+            = <&gpio0 22 GPIO_ACTIVE_HIGH>  // Reversed order for left side
+            , <&gpio0 24 GPIO_ACTIVE_HIGH>
             , <&gpio1 0  GPIO_ACTIVE_HIGH>
-            , <&gpio0 22 GPIO_ACTIVE_HIGH>  // Swapped B and V positions
-            , <&gpio0 24 GPIO_ACTIVE_HIGH>  // Swapped B and V positions
+            , <&gpio0 11 GPIO_ACTIVE_HIGH>
+            , <&gpio1 4  GPIO_ACTIVE_HIGH>
+            , <&gpio1 6  GPIO_ACTIVE_HIGH>
+            , <&gpio1 15 GPIO_ACTIVE_HIGH>
             ;
 
         row-gpios
