--- a/build.yaml
+++ b/build.yaml
@@ -3,3 +3,5 @@ include:
     shield: chastity_left
   - board: nice_nano_v2
     shield: chastity_right
+  - board: nice_nano_v2
+    shield: settings_reset
